<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pic_location"
            android:padding="5dp"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_location_on_white_24dp"
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:background="#FAFAFA"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:menu="@menu/search_menu"

        app:title="@string/app_name"
        app:titleTextColor="@color/white" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/linearLayout"
        android:id="@+id/recyclerView"
        android:layout_above="@id/make_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/make_request_button"
        android:text="@string/make_request"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="16sp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>